# CriminalDetector

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py  test_with_action_recognition.ipynb
Notebooks/: Yolov8m.ipynb
datasets/guncrime/filtered_frames/: progress.txt
scripts/: frame_extract.py  videos.json
